<resources>
    <string name="app_name">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="_9_december_12_22">9 December 12:22</string>
    <string name="title">Title</string>
    <string name="todo">TODO</string>
    <string name="notes">Notes</string>
    <string name="start">Start</string>
    <string name="add_something_for_notes">Add something for notes</string>
    <string name="contacts">Contacts</string>
    <string name="view_all_contacts">View all contacts</string>
    <string name="end">End</string>
    <string name="the_end">The end</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="profile">Profile</string>
    <string name="news">Сначала новые</string>
    <string name="olds">Сначала старые</string>
    <string name="a_z">По A-Z</string>
    <string name="z_a">По Z-A</string>
</resources>