<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.addnote.AddNoteFragment">

    <ImageButton
        android:id="@+id/btn_cancel_add_note"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="#00ffffff"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/btn_confirm_add_note"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:background="#00ffffff"
        android:src="@drawable/ic_baseline_check"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/edt_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="84dp"
        android:hint="@string/title"
        android:textSize="24sp"
        android:fontFamily="@font/roboto"
        android:textColor="#333"
        android:paddingHorizontal="18dp"
        android:paddingVertical="4dp"
        android:maxEms="12"
        android:background="@drawable/title_shape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/tv_add_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:textColor="#E6BD2B"
        android:text="@string/_9_december_12_22"
        app:layout_constraintTop_toBottomOf="@id/edt_add_title"
        app:layout_constraintStart_toStartOf="@id/edt_add_title"/>

    <EditText
        android:id="@+id/edt_add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="16dp"
        android:maxLines="15"
        android:maxLength="400"
        android:background="@drawable/shape"
        android:textColor="#333"
        android:fontFamily="@font/roboto"
        android:hint="@string/description"
        android:paddingHorizontal="18dp"
        android:paddingVertical="4dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_time" />



</androidx.constraintlayout.widget.ConstraintLayout>