<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.board.screens.ThridScreen">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="av_item_board, tv_item_title_board, tv_item_description_board, btn_item_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/av_item_board"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/end"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:id="@+id/tv_item_title_board"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/the_end"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:id="@+id/tv_item_description_board"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_item_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        android:background="@drawable/btn_start_shape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>